circt-bc260129-00001462/origin/error.log
bug.sv:3:3: error: concurrent assertion statements with action blocks are not supported yet
  assert property (@(posedge clk) a |-> b) else $error("msg");
  ^
